2003-07-28  Derek Atkins  <derek@ihtfp.com>

	* src/gnome-utils/gnc-date-edit.c: hide the calendar popup
	  on enter/return keypress events (in addition to ESC).
	Fixes #118500

2003-07-27  Matt Vanecek  <mevanecek@yahoo.com>

    * src/backend/postgres/PostgresBackend.c: Added pgendGetBook(),
      to retrieve the QofBook from the session, instead of storing the
      book in the backend object.
    - Where be->book was used, use pgendGetBook() instead.
    - Enhanced debug messages.
    * src/backend/postgres/PostgresBackend.h: Added the qofbook.h
      include, and the pgendGetBook() prototype
    * src/backend/postgres/book.c: Changed pgendGetBook to
      pgendBookRestore() to reflect its functionality of restoring
      the book's data to the engine.
    * src/backend/postgres/price.c: In pgendPriceFind(), couched the
      currenct portion of the SQL statement in an "if" statement,
      because gnc_pricedb_lookup_latest_any_currency() can pass in
      a NULL currency, and stpcpy() doesn't like NULLs.
    * src/backend/postgres/escape.c: enhanced debug messages.
    Fixes bug #116546

2003-07-26  Derek Atkins  <derek@ihtfp.com>

	* src/engine/qofbackend.h: add a new error, ERR_BACKEND_READONLY
	* src/engine/gw-engine-spec.scm: add new error type
	* src/backend/file/gnc-backend-file.c: differentiate between
	  "file is already locked" and "we can't create the lockfile"
	  so we can let the user know.
	* src/app-file/gnc-file.c: handle the new ERR_BACKEND_READONLY
	  error message by changing the error dialog presented to the
	  user.
	Fixes #117665

	* src/backend/file/gnc-backend-file.c: don't make the chmod() and
	  chown() functions fatal errors.  Warn the user if they fail, but
	  don't fail to save.  In the long run we need some way to pop up
	  warning messages from a backend, but until then we'll have to
	  stick with PWARN() and hope users see the console.
	Fixes #118258

	* src/app-file/gnc-file.c: fix the message to be more appropriate