@@ -568,7 +568,7 @@ AC_ARG_ENABLE( hbci,
   fi)
 if test x${HBCI_DIR} = xhbci ;
 then
-    AM_PATH_OPENHBCI(0.9.11)
+    AM_PATH_OPENHBCI(0.9.12.11)
     HBCI_LIBS="${OPENHBCI_LIBS}"
     HBCI_CFLAGS="${OPENHBCI_CFLAGS}"
 
