@@ -136,6 +136,7 @@ gnc_hbci_gettrans (GtkWidget *parent, Account *gnc_acc)
 
     /* Clean up behind ourself. */
     HBCI_API_clearQueueByStatus (api, HBCI_JOB_STATUS_NONE);
+    gnc_hbci_api_save (api);
     GNCInteractor_hide (interactor);
   }
 }
